tests/errors/typechecker/require_tag_x_give_tag_y.duck
fn main() {
    let x: .tagx = .tagy;
}
